# snore

./: Android-Build.sh  AudioDataBuffer.h  AudioDataBufferImpl.h  CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  readme.md  snore.cpp  snore.h  test.cpp
include/: sox.h
lib/: libsox.la
matlab/: BARKenergy.cpp  BARKenergy.h  CompactClassificationEnsemble.cpp  CompactClassificationEnsemble.h  CompactClassificationTree.cpp  CompactClassificationTree.h  CrestFactor.cpp  CrestFactor.h  FFTImplementationCallback.cpp  FFTImplementationCallback.h  FeatureTimeZeroCrossingRate.cpp  FeatureTimeZeroCrossingRate.h  GMM_score.cpp  GMM_score.h  GTCCValidator.h  HENR.cpp  HENR.h  LPCFeature.cpp  LPCFeature.h  NCF.cpp  NCF.h  PR800.cpp  PR800.h  SnoringRecognition_data.cpp  SnoringRecognition_data.h  SnoringRecognition_initialize.cpp  SnoringRecognition_initialize.h  SnoringRecognition_rtwutil.cpp  SnoringRecognition_rtwutil.h  SnoringRecognition_terminate.cpp  SnoringRecognition_terminate.h  SnoringRecognition_types.h  StandaloneFFTW3Interface.cpp  StandaloneFFTW3Interface.h  abs.cpp  abs.h  aggregatePredict.cpp  aggregatePredict.h  amax_group.cpp  amax_group.h  (+298 more)
release/include/: snore.h
